--- a/ReactNS/shopping-list/src/App.css
+++ b/ReactNS/shopping-list/src/App.css
@@ -1,5 +1,10 @@
-.btnStyle{
-  /* background-color: aquamarine; */
+/* .btnStyle{
+  background-color: aquamarine;
   display: flex;
   justify-content: space-around;
+} */
+
+.App{
+  text-align: center;
+  margin-top: 20px;
 }
